--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
+  <div class="container">
+    <img src="/images/image-qr-code.png" alt="QR code">
+    <h1>
+      Improve your front-end skills by building projects
+    </h1>
+    <p>
+      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    </p>
+  </div>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://portfolio-me-karanchandekar.vercel.app/">Karan Chandekar</a>.
   </div>
 </body>
 </html>
