--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="container">
-    <img src="/images/image-qr-code.png" alt="QR code">
-    <h1>
+  <main class="mobile-container">
+    <div class="container">
+      <img src="images/image-qr-code.png" alt="QR code">
+      <h1>
       Improve your front-end skills by building projects
     </h1>
     <p>
@@ -22,5 +23,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://portfolio-me-karanchandekar.vercel.app/">Karan Chandekar</a>.
   </div>
+  </main>
 </body>
 </html>
