--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <main class="mobile-container">
+  <main class="main-container">
     <div class="container">
       <img src="images/image-qr-code.png" alt="QR code">
       <h1>
